<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NCCalculator</string>
    <string name="more_activity">More</string>
    <string name="about_activity">About</string>
    <string name="theme_activity">Themes</string>
    <string name="help_activity">Help</string>

    <string name="about1">About</string>
    <string name="home">To ccalculator</string>
    <string name="input">Input</string>
    <string name="bino">Bin Output</string>
    <string name="deco">Dec Output</string>
    <string name="octo">Oct Output</string>
    <string name="hexo">Hex Output</string>
    <string name="select">Select Source System:</string>
    <string name="back">Back</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="cut">DEL</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="root">√</string>
    <string name="fact">!</string>
    <string name="power">^</string>
    <string name="hide">Hide</string>
    <string name="cancel">DEL</string>
    <string name="equal">=</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>

    <string name="easy">Easy number system converter</string>
    <string name="vibration">on</string>
    <string name="History">History</string>
    <string name="openBracket">(</string>
    <string name="closedBracket">)</string>
    <string name="banner_ad_unit_id">ca-app-pub-1211635675454735/6929071607</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
