<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:openDrawer="start">

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:weightSum="1"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout

            android:layout_weight="1"
            android:background="@color/dark_brown"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <LinearLayout

                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/seven"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/seven"
                    android:background="@drawable/custom_button"
                    android:textSize="25dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    />

                <Button
                    android:id="@+id/eight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_button"

                    android:layout_weight="1"
                    android:textSize="25dp"
                    android:text="@string/eight"
                    android:textColor="@color/white"
                     />

                <Button
                    android:id="@+id/nine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_button"

                    android:layout_weight="1"
                    android:text="@string/nine"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                     />


            </LinearLayout>
            <LinearLayout

                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button

                    android:layout_weight="1"
                    android:id="@+id/four"
                    android:background="@drawable/custom_button"


                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/four"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                     />

                <Button

                    android:layout_weight="1"
                    android:id="@+id/five"
                    android:background="@drawable/custom_button"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/five"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                     />

                <Button

                    android:layout_weight="1"
                    android:id="@+id/six"
                    android:background="@drawable/custom_button"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/six"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                     />


            </LinearLayout>
            <LinearLayout

                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button

                    android:layout_weight="1"
                    android:id="@+id/one"
                    android:background="@drawable/custom_button"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/one"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                     />

                <Button

                    android:layout_weight="1"
                    android:id="@+id/two"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_button"

                    android:clickable="false"
                    android:text="@string/two"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                     />

                <Button

                    android:layout_weight="1"
                    android:id="@+id/three"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_button"

                    android:clickable="false"
                    android:text="@string/three"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                     />

            </LinearLayout>
            <LinearLayout

                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button

                    android:layout_weight="1"
                    android:id="@+id/dot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_button"

                    android:textSize="25dp"
                    android:text="@string/dot"
                    android:textColor="@color/white"
                     />

                <Button

                    android:layout_weight="1"
                    android:id="@+id/zero"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_button"
                    android:textSize="25dp"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                     />

              

                <Button

                    android:layout_weight="1"
                    android:id="@+id/equalto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_button"


                    android:text="@string/equal"
                    android:textColor="@color/white"
                    android:textSize="25dp"
                     />



            </LinearLayout>

        </LinearLayout>



            <LinearLayout
                android:background="@color/light_brown"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            <Button
                android:id="@+id/cancel"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:layout_weight="1"

                android:longClickable="true"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:background="@drawable/custom_button"

                 />
           

            <Button
                android:id="@+id/divide"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:text="@string/div"
                 />

            <Button
                android:id="@+id/multiplication"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:text="@string/mul"
                
                android:layout_height="match_parent"
                android:layout_width="match_parent" />


            <Button
                android:id="@+id/minus"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="@drawable/custom_button"

                android:textColor="@color/white"

                android:text="@string/minus"
                android:textSize="25dp"
                 />
            <Button
                android:id="@+id/plus"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"

                android:textColor="@color/white"
                android:text="@string/plus"
                android:textSize="25dp"
                 />

      </LinearLayout>
        <View
          android:background="@color/green"

          android:layout_width="20dp"
          android:layout_height="match_parent">
      </View>
</LinearLayout>



    <!--  <include layout="@layout/extra_button"/>-->



    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/tut_2"
            android:visibility="gone"
            android:layout_gravity="end|center"

            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_gravity="end"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"

                    android:layout_gravity="center"
                    android:src="@android:drawable/arrow_up_float"
                    android:rotation="270"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"

                    android:layout_gravity="center"
                    android:src="@android:drawable/arrow_up_float"
                    android:rotation="270"/>
                <ImageView

                    android:layout_width="35dp"
                    android:layout_height="35dp"

                    android:layout_gravity="center"
                    android:src="@android:drawable/arrow_up_float"
                    android:rotation="270"/>
                <ImageView

                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_gravity="center"
                    android:src="@android:drawable/arrow_up_float"
                    android:rotation="270"/>
            </LinearLayout>
            <TextView
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Swipe left for more operations"
                android:layout_gravity="center"

                android:textColor="@color/white"/>
            <Button

                android:id="@+id/tut_2_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="ok"/>

        </LinearLayout>

    </FrameLayout>

    </FrameLayout>

    <android.support.design.widget.NavigationView

        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true" >

        <include layout="@layout/extra_button"/>
    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>