<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    android:id="@+id/extra_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/bg"
    android:orientation="vertical">


<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/start_layout"
            android:background="@android:drawable/screen_background_dark"
            android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:id="@+id/editText1"

        android:hint="@string/input"
        android:gravity="end|center"
        android:textSize="20sp"
        android:textIsSelectable="true"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"


        android:editable="false"
        android:inputType="text"
        android:maxLines="1"


          android:padding="10dp"

        android:cursorVisible="false"
        android:background="@android:drawable/dialog_holo_light_frame"
         />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"

        android:background="@android:drawable/dialog_holo_light_frame"
        android:id="@+id/spinner"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/textView1"
        android:background="@color/black"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:gravity="center"
        android:hint="to Binary (base 2)" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/editText2"
        android:gravity="end|center"
        android:textSize="20sp"
        android:hint="@string/bino"
        android:inputType="text"
        android:maxLines="1"

        android:editable="false"

        android:textIsSelectable="true"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:padding="10dp"

        android:background="@android:drawable/dialog_holo_light_frame"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@color/black"
        android:id="@+id/textView2"
        android:textColor="@android:color/white"

        android:textColorHint="@android:color/white"
        android:gravity="center"
        android:hint="to Decimal (base 10)" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/editText3"
        android:gravity="end|center"
        android:textSize="20sp"
        android:hint="@string/deco"
        android:inputType="text"
        android:maxLines="1"
        android:focusable="false"
        android:textIsSelectable="true"
        android:editable="false"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"


        android:background="@android:drawable/dialog_holo_light_frame"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:visibility="gone"
        android:background="@color/black"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:gravity="center"
        android:hint="to Octal (base 8)" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:visibility="gone"
        android:gravity="end|center"
        android:textSize="20sp"
        android:inputType="text"
        android:maxLines="1"
        android:focusable="false"
        android:textIsSelectable="true"
        android:editable="false"
        android:hint="@string/octo"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"


        android:background="@android:drawable/dialog_holo_light_frame"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:visibility="gone"
        android:background="@color/black"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:gravity="center"
        android:hint="to Hexadecimal (base 16)" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/editText5"
        android:textIsSelectable="true"
        android:inputType="none"
        android:editable="false"
        android:hint="@string/hexo"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:gravity="end|center"
        android:textSize="20sp"

        android:background="@android:drawable/dialog_holo_light_frame"
        android:padding="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">
        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </LinearLayout>
</LinearLayout>



    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/buttons"/>


    </LinearLayout>
        </LinearLayout>

    <FrameLayout

        android:layout_gravity="top|center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/tut_1"
            android:visibility="gone"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView

                android:layout_width="50dp"
                android:layout_height="50dp"

                android:layout_gravity="center"
                android:src="@drawable/click"/>
            <TextView

                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Click here to choose Number \n system conversion options"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"/>
            <Button

                android:id="@+id/tut_1_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="ok"/>
        </LinearLayout>

    </FrameLayout>
</FrameLayout>